--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "slika api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/piyush97/slika-API/issues"
   },
-  "homepage": "https://github.com/piyush97/slika-API#readme"
+  "homepage": "https://github.com/piyush97/slika-API#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
