--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "slika-api",
   "version": "1.0.0",
   "description": "slika api",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/piyush97/slika-API#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.8"
   }
 }
