--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.8",
     "nodemon": "^1.18.3"
+  },
+  "engines": {
+    "node": "10.6.0"
   }
 }
