--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   },
   "engines": {
     "node": "10.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
