--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   },
   "homepage": "https://github.com/piyush97/slika-API#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "joi": "^13.6.0",
-    "mongoose": "^5.2.9",
-    "mustache-express": "^1.2.7",
-    "nodemon": "^1.18.3"
+    "body-parser": "1.18.3",
+    "express": "4.16.3",
+    "joi": "13.6.0",
+    "mongoose": "5.2.9",
+    "mustache-express": "1.2.7",
+    "nodemon": "1.18.3"
   },
   "engines": {
     "node": "10.6.0"
   },
   "devDependencies": {
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint": "5.4.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.14.0"
   }
 }
