--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "express": "4.16.3",
+    "gravatar": "^1.6.0",
     "joi": "13.6.0",
     "mongoose": "5.2.9",
     "mustache-express": "1.2.7",
