--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/piyush97/slika-API#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.18.3",
     "express": "4.16.3",
     "gravatar": "^1.6.0",
