--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,2 @@
-language: node_js
-node_js:
- - "node"
- 
+language: node_js # Sets which engine use to build the project
+node_js: "node" # Specifies node version to use "node"="latest"
