--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "devDependencies": {
     "eslint": "5.4.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "jshint": "^2.9.6"
+    "eslint-plugin-import": "2.14.0"
   }
 }
