--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "5.2.9",
     "mustache-express": "1.2.7",
-    "nodemon": "1.18.3"
+    "nodemon": "1.18.3",
+    "passport": "^0.4.0"
   },
   "engines": {
     "node": "10.6.0"
