--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "5.2.9",
     "mustache-express": "1.2.7",
     "nodemon": "1.18.3",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "engines": {
     "node": "10.6.0"
