--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "1.18.3",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "express": "4.16.3",
     "gravatar": "^1.6.0",
     "joi": "13.6.0",
