--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/piyush97/slika-API.git"
   },
   "author": "piyush mehta",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/piyush97/slika-API/issues"
   },
