--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "nodemon": "1.18.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "pm2": "^3.0.4",
+    "underscore": "^1.9.1",
     "validator": "^10.6.0"
   },
   "engines": {
