--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "esdoc": "1.1.0",
     "esdoc-standard-plugin": "1.0.0",
     "express": "4.16.3",
-    "gravatar": "^1.6.0",
+    "gravatar": "1.6.0",
     "joi": "13.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "5.2.9",
