--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mongoose": "5.2.9",
     "mustache-express": "1.2.7",
     "nodemon": "1.18.3",
-    "passport": "^0.4.0",
+    "passport": "0.4.0",
     "passport-jwt": "^4.0.0",
     "underscore": "^1.9.1",
     "validator": "^10.6.0"
