--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "nodemon": "1.18.3",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
-    "underscore": "^1.9.1",
-    "validator": "^10.6.0"
+    "underscore": "1.9.1",
+    "validator": "10.6.0"
   },
   "engines": {
     "node": "10.6.0"
