--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "1.18.3",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "swagger-ui": "^3.18.2",
     "underscore": "1.9.1",
     "validator": "10.6.0"
   },
